--- a/respo/user-service-dev.properties
+++ b/respo/user-service-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/scs_user?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=yingchuanfu
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=50
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=2
