--- a/respo/user-service-dev.properties
+++ b/respo/user-service-dev.properties
@@ -1,1 +1,4 @@
-version:v1
+spring.datasource.url=jdbc:mysql://localhost:3306/scs_user?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=yingchuanfu
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
