--- a/sell-repo/application.yml
+++ b/sell-repo/application.yml
@@ -15,7 +15,8 @@ spring:
       url: jdbc:mysql://localhost/microservice_sell?characterEncoding=utf-8&useSSL=false
     jpa:
       show-sql: true
-eureka:
-  client:
-    service-url:
-      defaultzone: http://localhost:8761/eureka/
+     rabbitmq:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest   
